internal/fixtures/architecture/negative/credential-leakage/packages/sdk/src/bad.ts
export type UnsafeSource = {
  authRef: string;
};
